--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>KDG 2023 Projekthét</title>
   </head>
-  <body>
+  <body class="bg-slate-600">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
