--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KDG 2023 Projekthét</title>
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body class="bg-slate-600">
     <div id="app"></div>
