--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KDG 2023 Projekthét</title>
     <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#475569"/>
   </head>
   <body class="bg-slate-600">
     <div id="app"></div>
